# 3DEngine-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt
application/: CMakeLists.txt
application/src/: gui_system.cpp  gui_system.h  main.cpp
cmake/: ImGui.cmake
engine/: CMakeLists.txt
engine/src/: engine.cpp  engine.h
engine/src/controller/: camera_controller_system.cpp  camera_controller_system.h
engine/src/core/: application_event.h  context.h  event.h  input.h  key_codes.h  key_event.h  layer.h  log.h  mouse_codes.h  mouse_event.h  window.cpp  window.h
engine/src/ecs/: components.h  entity.h  entity_manager.cpp  entity_manager.h  system.cpp  system.h
engine/src/renderer/: bindless_texture.h  buffer.h  element_buffer.h  indirect_command_buffer.cpp  indirect_command_buffer.h  model_loader.cpp  model_loader.h  renderer_system.cpp  renderer_system.h  sampler.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.h  vertex_array_attrib.cpp  vertex_array_attrib.h  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
engine/src/services/: i_camera.h  perspective_camera.cpp  perspective_camera.h  services.h
engine/src/utils/: utils.h
resources/: boxes.mtl  frag.glsl  vert.glsl
